// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Rating generates correct starts 100 reviews 1`] = `
<div
  className="rating"
>
  <div
    className="stars"
  >
    <span
      className="fa fa-star checked"
    />
    <span
      className="fa fa-star checked"
    />
    <span
      className="fa fa-star checked"
    />
    <span
      className="fa fa-star"
    />
    <span
      className="fa fa-star"
    />
  </div>
  <span
    className="review-no"
  >
    100
     reviews
  </span>
</div>
`;

exports[`Rating generates correct starts without number of reviews 1`] = `
<div
  className="rating"
>
  <div
    className="stars"
  >
    <span
      className="fa fa-star checked"
    />
    <span
      className="fa fa-star checked"
    />
    <span
      className="fa fa-star checked"
    />
    <span
      className="fa fa-star"
    />
    <span
      className="fa fa-star"
    />
  </div>
</div>
`;
